# grit-lab-projects

./: .gitignore  README.md
ascii-art/: main.go
ascii-art/fs/: main.go
ascii-art/testink/: main.go
filler/: .gitignore  README.md  xd.sh
filler/docker_image/: Dockerfile
forum/: Dockerfile  README.md  go.mod  main.go  runDocker.sh
forum/database/: allData.sqlite3
forum/templates/: account.html  createpost.html  detail.html  errorpage.html  index.html  posts.html
graphql/: .gitignore
graphql/graphql/: package.json
groupie-tracker-visualizations/: README.md  go.mod  main.go
localhost/: Cargo.toml  README.md  bad_config.json  data.txt  server_config.json
localhost/src/: lib.rs  main.rs
localhost/src/cgi/: burgerking.php  lol.php
localhost/src/content/: index.html
localhost/src/error-pages/: 400.html  403.html  404.html  405.html  413.html  500.html
localhost/src/localhost/: config.rs
make-your-game/: README.md  index.html  maze.js  movement.js  style.css
mini-framework/: README.md  app.css  app.js  documentation.md  index.html  myFramework.js  routing.js  state-management.js
real-time-forum-typing-in-progress/: README.md  go.mod  main.go
real-time-forum-typing-in-progress/database/: allData.sqlite3
real-time-forum-typing-in-progress/server/: Handler.go  authentication.go  chatHistory.go  check.go  comments.go  currentUser.go  login.go  onlineUsers.go  posts.go  userList.go  ws.go
real-time-forum-typing-in-progress/sqlite/: addMessage.go  addPost.go  addUser.go  createDb.go  getComments.go  getMessages.go  getPosts.go  getUserid.go  (+4 more)
(+70 files in other folders)
