[package]
name = "localhost"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = {version = "0.8.10", features = ["os-poll", "os-ext", "net"]}
base64 = "0.13.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
cookie = "0.18"
serde_json = "1.0.111"
